--- a/helm/bigmon/charts/main/values.yaml
+++ b/helm/bigmon/charts/main/values.yaml
@@ -25,6 +25,8 @@ imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
 
+installedAppsList: ""
+
 serviceAccount:
   # Specifies whether a service account should be created
   create: false
