--- a/helm/idds/charts/rest/values.yaml
+++ b/helm/idds/charts/rest/values.yaml
@@ -61,6 +61,9 @@ service:
   httpsPort: 8443
   httpPort: 8080
 
+restHost: "https://idds-rest:8443"
+bigmonURL: "https://bigmon"
+
 ingress:
   enabled: true
   className: ""
