--- a/helm/harvester/charts/harvester/queueconfig/lsst.panda_queueconfig.json
+++ b/helm/harvester/charts/harvester/queueconfig/lsst.panda_queueconfig.json
@@ -184,8 +184,8 @@
       "x509UserProxy": "/data/harvester/run/x509up_u25606",
       "pandaTokenDir": "/opt/harvester/etc/auth_tokens/",
       "pandaTokenFilename": "48975ff1c8b067b9dcea54d5cdd28cc8",
-      "logDir": "/var/log/condor_logs/$hostname",
-      "logBaseURL": "https://rubin-panda-bigmon-dev.slac.stanford.edu:8443/condor_logs/$hostname",
+      "logDir": "/var/log/condor_logs/${hostname}",
+      "logBaseURL": "https://rubin-panda-bigmon-dev.slac.stanford.edu:8443/condor_logs/${hostname}",
       "condorPool": "${hostname}",
       "condorScheddNew": ["harvester-dev-0.harvester-dev.panda.svc.cluster.local","harvester-dev-1.harvester-dev.panda.svc.cluster.local","harvester-dev-2.harvester-dev.panda.svc.cluster.local"],
       "condorPoolNew": ["harvester-dev-0.harvester-dev.panda.svc.cluster.local:9618","harvester-dev-1.harvester-dev.panda.svc.cluster.local:9618","harvester-dev-2.harvester-dev.panda.svc.cluster.local:9618"],
@@ -733,7 +733,7 @@
 
     "submitter": {
 	  "nCore": -1,
-          "nCorePerNode": -1,
+          "nCorePerNode": 1,
           "submitMode": "PUSH",
           "ceQueueName": "rubin_merge",
           "ceARCGridType": "arc",
@@ -1099,7 +1099,7 @@
 
     "submitter": {
           "nCore": -1,
-          "nCorePerNode": -1,
+          "nCorePerNode": 1,
           "submitMode": "PUSH",
 	  "useCRICGridCE": true,
           "ceQueueName": "lsst",
@@ -1454,7 +1454,7 @@
 
     "submitter": {
           "nCore": -1,
-          "nCorePerNode": -1,
+          "nCorePerNode": 1,
           "submitMode": "PUSH",
 	  "useCRICGridCE": true,
           "ceQueueName": "grid",
@@ -1826,7 +1826,7 @@
 
     "submitter": {
           "nCore": -1,
-          "nCorePerNode": -1,
+          "nCorePerNode": 1,
           "submitMode": "PUSH",
 	  "useCRICGridCE": true,
 	  "ceQueueName": "EL9",
