update harvester to fix multiple cores

--- a/helm/harvester/charts/harvester/queueconfig/lsst.panda_queueconfig.json
+++ b/helm/harvester/charts/harvester/queueconfig/lsst.panda_queueconfig.json
@@ -25,6 +25,8 @@
       "useAtlasGridCE": false,
       "useAtlasAGIS": true,
       "useCRICGridCE": true,
+      "nNode": 1,
+      "maxRequestRam": 500000,
       "templateFile": "/opt/harvester/sandbox/lsst.submit_pilot_pull_ups.sdf",
       "executableFile": "/opt/harvester/sandbox/lsst.runpilot2-wrapper.sh",
       "x509UserProxy": "/data/harvester/run/x509up_u25606",
@@ -101,6 +103,8 @@
       "useAtlasGridCE": false,
       "useAtlasAGIS": true,
       "useCRICGridCE": true,
+      "nNode": 1,
+      "maxRequestRam": 500000,
       "templateFile": "/opt/harvester/sandbox/lsst.submit_pilot_pull.sdf",
       "executableFile": "/opt/harvester/sandbox/lsst.runpilot2-wrapper.sh",
       "x509UserProxy": "/data/harvester/run/x509up_u25606",
@@ -179,6 +183,8 @@
       "useAtlasGridCE": false,
       "useAtlasAGIS": true,
       "useCRICGridCE": true,
+      "nNode": 1,
+      "maxRequestRam": 500000,
       "templateFile": "/opt/harvester/sandbox/lsst.submit_pilot_push.sdf",
       "executableFile": "/opt/harvester/sandbox/lsst.runpilot2-wrapper.sh",
       "x509UserProxy": "/data/harvester/run/x509up_u25606",
