--- a/helm/harvester/values/values-lsst-prod.yaml
+++ b/helm/harvester/values/values-lsst-prod.yaml
@@ -6,6 +6,13 @@
 harvester:
   replicaCount: 3
 
+  image:
+    # repository: ghcr.io/wguanicedew/harvester
+    # tag: "wguan0.2.36"
+    # repository: ghcr.io/wguanicedew/harvester-alma9
+    repository: ghcr.io/wguanicedew/harvester
+    tag: "wguan0.5.15.14"
+
   persistentvolume:
     class: wekafs--sdf-k8s01
     create: false
