options to enable/disable harvester probe

--- a/helm/harvester/charts/harvester/templates/statefulset.yaml
+++ b/helm/harvester/charts/harvester/templates/statefulset.yaml
@@ -182,6 +182,7 @@ spec:
             {{- end }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+          {{- if .Values.enableProbe }}
           livenessProbe:
             exec:
               command:
@@ -189,6 +190,7 @@ spec:
                 - /var/log/panda/harvester_healthy
             initialDelaySeconds: 1800
             periodSeconds: 600
+          {{- end }}
           {{- if .Values.autoStart }}
           command: ["/bin/sh", "-c"]
           args:
